# cloud-api

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: tests.yml
cloud_api/: __init__.py  __main__.py  conftest.py  logging.py  settings.py
cloud_api/db/dao/: dummy_dao.py
cloud_api/services/: __init__.py
cloud_api/services/rabbit/: lifetime.py
cloud_api/services/redis/: lifetime.py
cloud_api/tests/: __init__.py  test_dummy.py  test_redis.py
cloud_api/web/: __init__.py  application.py  lifetime.py
cloud_api/web/api/: __init__.py  router.py
cloud_api/web/api/docs/: __init__.py
cloud_api/web/api/dummy/: __init__.py  views.py
cloud_api/web/api/echo/: __init__.py  views.py
cloud_api/web/api/monitoring/: __init__.py
cloud_api/web/api/rabbit/: __init__.py  views.py
cloud_api/web/api/redis/: __init__.py  views.py
deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.otlp.yml  docker-compose.yml
deploy/kube/: app.yml  db.yml  namespace.yml  rabbit.yml  redis.yml
